# cyber-sentinels-helper-app

./: .gitignore  CLI_Bot.py  README.md  README.ua.md  __main__.py  history.txt  pyproject.toml
Py_WEB_01/: ContactBot.py  Show.py  __main__.py
Py_WEB_01/contacts/: Address.py  AddressBook.py  Birthday.py  Email.py  Field.py  Name.py  Note.py  Phone.py  Record.py  Status.py  contact_utils.py  record_func.py
Py_WEB_01/outputs/: history.txt
Py_WEB_01/utils/: beginning.py  help.py
contacts/classes/: AddressBook.py  Birthday.py  Email.py  Field.py  Name.py  Phone.py  Record.py  Status.py
cyber-sentinels-helper-app/: Bot.py  CLI_Bot.py  __main__.py
cyber-sentinels-helper-app/contacts/: Address.py  AddressBook.py  Birthday.py  Email.py  Name.py  Note.py  Phone.py  Record.py  Status.py  input_errors.py
cyber-sentinels-helper-app/outputs/: history.txt
file_manager/: normalize.py  process_directory.py  process_file.py  sort_dir.py
notes/: note_manager.py
outputs/: address_book.csv  address_book.json  history.txt  notes.json  todo.json
todo/: todo_manager.py
utils/: address_book_functions.py  contact_utils.py  eddress_book_functions.py  edit_helper.py  help.py  notes_utils.py  record_func.py  todo_utils.py
